--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <title>HI IM CARROT</title>
+        <title>Minh Vu</title>
         <style>
 
         </style>
     </head>
     <body>
         <h1>HI IM CARROT :3</h1>
+        <!-- Primary Menu -->
+        <div class="module menu left">
+            <ul id="nav-primary" class="nav nav-primary">
+                <li><a href="#home">Start</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </body>
 </html>
