--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
             /* Change the color of links on hover */
             .topnav a:hover {
-            background-color: rgb(222, 102, 0);
+            background-color: rgb(254, 160, 47);
             color: rgb(0, 63, 90);
             }
 
             /* Add a color to the active/current link */
             .topnav a.active {
-            background-color: #04AA6D;
-            color: white;
+            background-color: rgb(222, 102, 0);
+            color: rgb(0, 63, 90);
             }
         </style>
     </head>
