--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </style>
     </head>
     <body>
-        <h1>HI IM CARROT :3</h1>
+        <h1>Carrota</h1>
         <!-- Primary Menu -->
         <div class="topnav">
             <ul id="nav-primary" class="nav nav-primary">
