--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang = "en">
+    scroll-behavior: smooth;
     <head>
         <title>Minh Vu</title>
         <style>
+            :root{
+                --global-blue: rgb(12, 0, 102);
+
+            }
             /* Add a black background color to the top navigation */
             .topnav {
-            background-color: rgb(0, 63, 90);
+            background-color: var(--global-blue);
             overflow: hidden;
             }
 
@@ -14,7 +19,7 @@
             float: left;
             color: rgb(254, 160, 47);
             text-align: center;
-            padding: 14px 20px;
+            padding: 14px 30px;
             text-decoration: none;
             font-size: 17px;
             }
@@ -22,13 +27,13 @@
             /* Change the color of links on hover */
             .topnav a:hover {
             background-color: rgb(254, 160, 47);
-            color: rgb(0, 63, 90);
+            color: var(--global-blue);
             }
 
             /* Add a color to the active/current link */
             .topnav a.active {
             background-color: rgb(222, 102, 0);
-            color: rgb(0, 63, 90);
+            color: var(--global-blue);
             }
         </style>
     </head>
