--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
-    scroll-behavior: smooth;
     <head>
         <title>Minh Vu</title>
         <style>
             :root{
-                --global-blue: rgb(12, 0, 102);
+                --global-bg: #121212;
 
             }
             /* Add a black background color to the top navigation */
@@ -27,13 +26,13 @@
             /* Change the color of links on hover */
             .topnav a:hover {
             background-color: rgb(254, 160, 47);
-            color: var(--global-blue);
+            color: var(--global-bg);
             }
 
             /* Add a color to the active/current link */
             .topnav a.active {
             background-color: rgb(222, 102, 0);
-            color: var(--global-blue);
+            color: var(--global-bg);
             }
         </style>
     </head>
