--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Minh Vu</title>
         <style>
             :root{
-                --global-bg: #121212;
+                --global-bg: rgb(18, 18, 18);
 
             }
             /* Add a black background color to the top navigation */
