--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
                 --global-bg: rgb(18, 18, 18);
 
             }
+            ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            }
             /* Add a black background color to the top navigation */
             .topnav {
             background-color: var(--global-blue);
