--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 
             }
             ul {
-            list-style-type: none;
+            list-style-type: none;  /*removes bullets*/
             margin: 0;
             padding: 0;
             }
+
+            body{
+                background-color: var(--global-bg);
+            }
             /* Add a black background color to the top navigation */
             .topnav {
-            background-color: var(--global-blue);
+            background-color: var(--global-bg);
             overflow: hidden;
             }
 
