--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <style>
             :root{
                 --global-bg: rgb(18, 18, 18);
+                --global-bg2: rgb(38,38,38);
 
             }
             ul {
@@ -18,7 +19,7 @@
             }
             /* Add a black background color to the top navigation */
             .topnav {
-            background-color: var(--global-bg);
+            background-color: var(--global-bg2);
             overflow: hidden;
             }
 
