--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
             :root{
                 --global-bg: rgb(18, 18, 18);
                 --global-bg2: rgb(38,38,38);
+                --global-accent: rgb(128,252,252);
+
 
             }
             ul {
@@ -17,6 +19,7 @@
             body{
                 background-color: var(--global-bg);
             }
+
             /* Add a black background color to the top navigation */
             .topnav {
             background-color: var(--global-bg2);
@@ -50,6 +53,7 @@
         <!-- Primary Menu -->
         <div class="topnav">
             <ul id="nav-primary" class="nav nav-primary">
+                <li>Minh Vu</li>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="experience.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
