--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
             background-color: rgb(222, 102, 0);
             color: var(--global-bg);
             }
+            .topnav a.title {
+            background-color: var(--global-bg);
+            }
         </style>
     </head>
     <body>
         <!-- Primary Menu -->
         <div class="topnav">
             <ul id="nav-primary" class="nav nav-primary">
-                <li>Minh Vu</li>
+                <li><a class="title">Minh Vu</a></li>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="experience.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
