--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
             :root{
                 --global-bg: rgb(18, 18, 18);
                 --global-bg2: rgb(38,38,38);
-                --global-accent: rgb(128,252,252);
-
-
+                --global-primary: rgb(0,134,223);
+                --global-accent: rgb(50,222,224);
             }
             ul {
                 position: fixed;
@@ -52,7 +51,8 @@
             }
             .topnav a.title {
                 background-color: var(--global-bg);
-            
+                font-size: 20px;
+                
             }
 
         </style>
