--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
                 --global-primary: rgb(0,134,223);
                 --global-accent: rgb(50,222,224);
             }
+            body{
+                background-color: var(--global-bg);
+                font-family:Verdana, Geneva, Tahoma, sans-serif;
+            }
+
             ul {
                 position: fixed;
                 top: 0;
@@ -16,10 +21,6 @@
                 list-style-type: none;  /*removes bullets*/
                 margin: 0;
                 padding: 0;
-            }
-
-            body{
-                background-color: var(--global-bg);
             }
 
             /* Add a black background color to the top navigation */
