something works lol

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang = "en">
     <head>
         <title>Minh Vu</title>
+        <!--Link stylesheet-->
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -18,5 +19,10 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
+        
+        <section>
+            <h1>Clouds are just fluffy water</h1>
+        </section>
+
     </body>
 </html>
