--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
             <h1>iahglharihoas</h1>
         </section>
 
+        <footer>
+            <h1>Clouds are just fluffy water</h1>
+        </footer>
+
     </body>
 </html>
