need to fix horizontal scroll

--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
         <!-- Primary Menu -->
         <div class="topnav">
             <ul id="nav-primary" class="nav nav-primary">
-                <image class="logo" src="icon.PNG" width="45" ></image>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <image class="logo" src="icon.PNG" width="48.4" ></image>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contacts">Contact</a></li>
             </ul>
         </div>
         
-        <section>
-            <h1>iahglharihoas</h1>
-        </section>
+        <div class="main" id='home'>
+            <h2>About me</h2>
+        </div>
+
+        <div class="main" id='projects'>
+            <h2>projects section?</h2>
+        </div>
+
+        <div class="main" id='contacts'>
+            <h2>Contacts section?</h2>
+        </div>
 
         <footer>
-            <h1>Clouds are just fluffy water</h1>
+            <h1>more blahblahblah</h1>
         </footer>
 
     </body>
