--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang = "en">
     <head>
         <title>Minh Vu</title>
+        <link rel="icon" href="logo.PNG">
         <!--Link stylesheet-->
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header id="header">
             <h1>Minh Vu</h1>
+            <image class="background" id='headerBG' src="colourPattern.PNG"></image>
         </header>
 
         <!-- Primary Menu -->
         <div class="topnav">
-            <ul id="nav-primary" class="nav nav-primary">
-                <image class="logo" src="icon.PNG" width="48.4" ></image>
+            <ul>
+                <a href="#header" id='navLogo'><image class="logo" src="navbarCarrot.PNG" width="48.4"></image></a>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contacts">Contact</a></li>
             </ul>
         </div>
@@ -25,11 +28,17 @@
         </div>
 
         <div class="main" id='projects'>
-            <h2>projects section?</h2>
+            <h2>Projects section?</h2>
+            <image id='mainBG' src="blackPattern.PNG"></image>
+        </div>
+
+        <div class="main" id='gallery'>
+            <h2>Gallery</h2>
         </div>
 
         <div class="main" id='contacts'>
             <h2>Contacts section?</h2>
+            <image id='mainBG' src="blackPattern.PNG"></image>
         </div>
 
         <footer>
