github pages case sensitive lol
it's png not PNG

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <title>Minh Vu</title>
-        <link rel="icon" href="logo.PNG">
+        <link rel="icon" href="logo.png">
         <!--Link stylesheet-->
         <link rel="stylesheet" href="style.css">
     </head>
@@ -15,7 +15,7 @@
         <!-- Primary Menu -->
         <div class="topnav">
             <ul>
-                <a href="#header" id='navLogo'><image class="logo" src="navbarCarrot.PNG" width="48.4"></image></a>
+                <a href="#header" id='navLogo'><image class="logo" src="navbarCarrot.png" width="48.4"></image></a>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#gallery">Gallery</a></li>
@@ -29,7 +29,7 @@
 
         <div class="main" id='projects'>
             <h2>Projects section?</h2>
-            <image id='mainBG' src="blackPattern.PNG"></image>
+            <image id='mainBG' src="blackPattern.png"></image>
         </div>
 
         <div class="main" id='gallery'>
@@ -38,7 +38,7 @@
 
         <div class="main" id='contacts'>
             <h2>Contacts section?</h2>
-            <image id='mainBG' src="blackPattern.PNG"></image>
+            <image id='mainBG' src="blackPattern.png"></image>
         </div>
 
         <footer>
