--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header id="header">
             <h1>Minh Vu</h1>
-            <image class="background" id='headerBG' src="colourPattern.PNG"></image>
+            <image class="background" id='headerBG' src="colourPattern.png"></image>
         </header>
 
         <!-- Primary Menu -->
