--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
         <!-- Primary Menu -->
         <div class="topnav">
             <ul>
-                <a href="#header" id='navLogo'><image class="logo" src="navbarCarrot.png" width="48.4"></image></a>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#header" id='navLogo'><image class="logo" src="navbarCarrot.png" width="48.4"></image></a></li>
+                <li><homeButton href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contacts">Contact</a></li>
             </ul>
         </div>
         
+        <!--Body of webpage-->
         <div class="main" id='home'>
             <h2>About me</h2>
         </div>
 
         <div class="main" id='projects'>
-            <h2>Projects section?</h2>
+            <h2>Projects</h2>
             <image id='mainBG' src="blackPattern.png"></image>
         </div>
 
@@ -38,13 +39,16 @@
         </div>
 
         <div class="main" id='contacts'>
-            <h2>Contacts section?</h2>
+            <h2>Contact me</h2>
             <image id='mainBG' src="blackPattern.png"></image>
         </div>
 
+        <!--Footer-->
         <footer>
             <h1>more blahblahblah</h1>
         </footer>
 
+        <!--Link to javascript file-->
+        <script scr="script.js"></script>
     </body>
 </html>
