--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </div>
         
         <!--Body of webpage-->
-        <div class="main" id='home'>
+        <div class="main" id='home' height="80rem">
             <h2 id="h2Blue">Hi, I'm Minh Vu</h2>
             <br/><br/><br/><br/><br/><br/><br/><br/>
-            <image src="aboutMe.png" width="90%" height="auto" style="border-left:50px"></image>
+            <image src="aboutMe.png" width="90%" height="auto" style="border-bottom:50px"></image>
         </div>
 
         <div class="main" id='projects'>
@@ -104,8 +104,8 @@
                     <a href="gallery/IMG_1189.JPG" data-lightbox="art" data-title="add caption here">
                         <image src="gallery/IMG_1189.JPG">
                     </a>
-                    <a href="gallery/IMG_7208.JPG" data-lightbox="art" data-title="add caption here">
-                        <image src="gallery/IMG_7208.JPG">
+                    <a href="gallery/IMG_7208.jpg" data-lightbox="art" data-title="add caption here">
+                        <image src="gallery/IMG_7208.jpg">
                     </a>
                     <a href="gallery/IMG_7619.jpg" data-lightbox="art" data-title="add caption here">
                         <image src="gallery/IMG_7619.jpg">
