further link to portfolio

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                     </a>
                     
                 </div>
+                Check out more of my artworks and photos
             </div>
 
         </div>
